# docs/swagger.json
@@ -571,6 +571,12 @@
                             "$ref": "#/definitions/exception.ApiException"
                         }
                     },
+                    "409": {
+                        "description": "La imagen ya existe",
+                        "schema": {
+                            "$ref": "#/definitions/exception.ApiException"
+                        }
+                    },
                     "500": {
                         "description": "Ha ocurrido un error inesperado",
                         "schema": {
